syntax = "proto3";

package face_authenticator;


// protoc --go_out=pkg/face-authenticator --go_opt=paths=source_relative --go-grpc_out=pkg/face-authenticator --go-grpc_opt=paths=source_relative -I face-authenticator/ face-authenticator/workflow.proto
option go_package = "github.com/Guillaume-Boutry/face_authenticator";

service Enroller {
  rpc enroll(EnrollRequest) returns (EnrollResponse) {}
}

service Authenticator {
  rpc authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

message Point {
  int64 x = 1;
  int64 y = 2;
}

message FaceCoordinates {
  Point top_left = 1;
  Point bottom_right = 2;
  Point left_eye = 3;
  Point right_eye = 4;
}

message FaceRequest {
  string id = 1;
  bytes face = 2;
  FaceCoordinates face_coordinates = 3;
}

message EnrollRequest {
  FaceRequest face_request = 1;
}

message EnrollResponse {
  EnrollStatus status = 1;
  string message = 2;
}


enum EnrollStatus {
  ENROLL_STATUS_OK = 0;
  ENROLL_STATUS_ERROR = 1;
}

message AuthenticateRequest {
  FaceRequest face_request = 1;
}

message AuthenticateResponse {
  AuthenticateStatus status = 1;
  string message = 2;
}

enum AuthenticateStatus {
  AUTHENTICATE_STATUS_OK = 0;
  AUTHENTICATE_STATUS_ERROR = 1;
}